$Id: History,v 1.76 2003-01-08 00:01:11 asaim Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

- Jan 7, 2002      (particles-V05-00-01)
- Instant fixes for new 'cuts-by-region'
  Corrected files :
     management/include/G4VRangeToEnergyConverter.hh
     management/src/G4ProductionCutsTable.cc
     management/src/G4RToEConvForElectron.cc
     management/src/G4RToEConvForGamma.cc
     management/src/G4RToEConvForPositron.cc
     management/src/G4VRangeToEnergyConverter.cc

- Dec 16, 2002     (particles-V05-00-00)
- Merged branch "geant4-04-01-ref-02-cuts-branch" to HEAD.
  Included development for 'cuts-by-region'; changes should be
  transparent to existing design:
  o Removed concrete implementation of method 'CalcEnergyCuts( const G4Material* )'
    from affected particles.
  o Removed ComputeLoss(), BuildRangeVector() from G4Electron and G4Positron.
  o Added classes G4MaterialCutsCouple, G4ProductionCuts, G4ProductionCutsTable,
    G4RToEConvForAntiNeutron, G4RToEConvForAntiProton, G4RToEConvForElectron,
    G4RToEConvForGamma, G4RToEConvForNeutron, G4RToEConvForPositron,
    G4RToEConvForProton, G4VRangeToEnergyConverter - in processes/management.