@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4ProductionCuts.icc,v 1.2 2002-12-16 11:15:43 gcosmo Exp $
+// $Id: G4ProductionCuts.icc,v 1.3 2003-01-14 22:26:49 asaim Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
