@@ -1,4 +1,4 @@
-$Id: History,v 1.76 2003-01-08 00:01:11 asaim Exp $
+$Id: History,v 1.77 2003-01-14 22:26:48 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -17,7 +17,10 @@ committal in the CVS repository !
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 
-- Jan 7, 2002      (particles-V05-00-01)
+- Jan 14, 2003     (particles-V05-00-02)
+- Fixes for cuts-per-region
+
+- Jan 7, 2003      (particles-V05-00-01)
 - Instant fixes for new 'cuts-by-region'
   Corrected files :
      management/include/G4VRangeToEnergyConverter.hh
